# CGL

./: CMakeLists.txt  run.sh
src/: CMakeLists.txt  core.c  main.c  rendering.c  utils.c  window.c
src/headers/: core.h  rendering.h  types.h  utils.h  values.h  window.h
test/: CMakeLists.txt  main.c
